networp/egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-hello-world-egress
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: frontend
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: web-hello-world
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
