networp/ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-hello-world-ingress
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: web-hello-world
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
